--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       max-width: 1500px;
       margin: 24px auto;
       padding: 0 16px 28px;
+      width: 100%;
     }
 
     .panel {
@@ -49,6 +50,10 @@
       padding: 10px 12px;
       border-bottom: 1px solid var(--line);
       background: #f7faff;
+      overflow-x: auto;
+      overflow-y: hidden;
+      flex-wrap: nowrap;
+      scrollbar-width: thin;
     }
 
     .tab-btn {
@@ -60,6 +65,7 @@
       font-size: 12px;
       font-weight: 600;
       cursor: pointer;
+      flex: 0 0 auto;
     }
 
     .tab-btn.active {
@@ -1382,6 +1388,7 @@
       align-items: center;
       gap: 10px;
       padding: 10px 12px 0;
+      flex-wrap: wrap;
     }
 
     .app-meta {
@@ -1520,12 +1527,15 @@
       font-size: 12px;
       line-height: 1.4;
       white-space: pre-wrap;
+      overflow-wrap: anywhere;
+      word-break: break-word;
     }
 
     .admin-wrap {
       padding: 16px;
       display: grid;
       gap: 14px;
+      min-width: 0;
     }
 
     .admin-card {
@@ -1533,6 +1543,7 @@
       border-radius: 12px;
       background: #fff;
       padding: 12px;
+      min-width: 0;
     }
 
     .admin-grid {
@@ -1540,6 +1551,19 @@
       gap: 10px;
       grid-template-columns: repeat(3, minmax(170px, 1fr));
       align-items: end;
+      min-width: 0;
+    }
+
+    .admin-grid > * {
+      min-width: 0;
+    }
+
+    .admin-grid input,
+    .admin-grid select,
+    .admin-grid button {
+      width: 100%;
+      min-width: 0;
+      box-sizing: border-box;
     }
 
     .admin-grid .span-2 {
@@ -1586,6 +1610,7 @@
 
     .admin-table-wrap {
       overflow: auto;
+      max-width: 100%;
     }
 
     .admin-table button {
@@ -1987,6 +2012,15 @@
     }
 
     @media (max-width: 980px) {
+      .wrap {
+        margin: 12px auto;
+        padding: 0 8px 16px;
+      }
+
+      .tabs {
+        padding: 8px;
+      }
+
       .admin-grid {
         grid-template-columns: 1fr;
       }
